fix(user-details): Fix centering of profile pic on mobile

--- a/src/app/user-details/user-details.component.css
+++ b/src/app/user-details/user-details.component.css
@@ -60,10 +60,11 @@ a {
         height: 100px;
         width: 100px;
         flex: 0 0 100px;
+        margin: auto 0;
     }
 
     #info-header {
-        margin: 12px 0 0 3%;
+        margin: auto 12px;
     }
 
     .main {
